[package]
name = "website-repeater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.3", features = ["serde"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
suckit = "0.2.0"

[profile.release]
strip = true
lto = "fat"
panic = "abort"